# bobbycar-led-board

./: .gitmodules  README.md  fp-lib-table  led-board.kicad_pcb  led-board.kicad_prl  led-board.kicad_pro  led-board.kicad_sch  led-board.kicad_sch-bak  sym-lib-table
boardcomputer.pretty/: Amass_XT60PW-M.kicad_mod  L_5040.kicad_mod  QFN-20-1EP_3x5mm_P0.85mm.kicad_mod  User Library-XT30PW-F.step  User Library-XT30PW-M.step  pad-1.5.kicad_mod
hardware/: boardcomputer.kicad_sym  led-board.kicad_pcb  led-board.kicad_prl  led-board.kicad_pro  led-board.kicad_sch  led-board.kicad_sch_old
hardware/boardcomputer.pretty/: User Library-SRN5040.step
hardware/jlcpcb/assembly/: POS-led-board.csv
hardware/jlcpcb/gerber/: led-board-EdgeCuts.gbr  led-board-MaskBottom.gbr  led-board-MaskTop.gbr  led-board-NPTH.drl  led-board-PTH.drl
jlcpcb/: project.db
jlcpcb/assembly/: BOM-led-board.csv
jlcpcb/gerber/: led-board-CuBottom.gbr  led-board-CuTop.gbr  led-board-PasteBottom.gbr  led-board-PasteTop.gbr  led-board-SilkBottom.gbr  led-board-SilkTop.gbr  led-board-VScore.gbr
software/: .gitignore  CMakeLists.txt  export.sh  sdkconfig
software/main/: CMakeLists.txt  ledstrip.cpp  ledstrip.h  main.cpp  measurements.cpp  measurements.h  mosfets.cpp  mosfets.h  pins.h  taskmanager.cpp  taskmanager.h
software/tools/: bobby-monitor-flasher
